--- a/app/assets/css/partials/_general.scss
+++ b/app/assets/css/partials/_general.scss
@@ -6390,3 +6390,40 @@ ul.nolist {
   background-size: contain;
   background-repeat: no-repeat;
 }
+img.img-fluid.new-image-grid {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  object-fit: cover;
+}
+.new-text-grid p {
+  font-family: 'DIN Pro'!important;
+  font-size: 1.1rem!important;
+  font-weight: 500!important;
+  line-height: 1.7rem!important;
+  text-align: left!important;
+  color: #333!important;
+}
+.new-text-grid a{
+  color: #00999A!important;
+  background-color: transparent!important;
+  border: 1px solid #00999A!important;
+  padding: 10px 20px!important;
+  text-decoration: none!important;
+  border-radius: 5px!important;
+  margin-top: 1.5rem!important;
+  display: inline-block;
+}
+.new-text-grid a:hover{
+  color: white!important;
+  background-color: #00999A!important;
+  border: 1px solid #00999A!important;
+}
+.new-text-grid h2 {
+  margin-top: 0!important;
+  margin-bottom: 1rem!important;
+}
+@media (min-width: 100px) and (max-width: 991px) {
+.new-text-grid h2 {
+  font-size: 2.5rem!important;
+}}
